Ignore fastlane archives

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 StalkCentral.xcodeproj/xcuserdata
 StalkCentral.xcworkspace/xcuserdata
 fastlane/report.xml
+StalkCentral.app.dSYM.zip
+StalkCentral.ipa
